# whatsapp-link-monitor

./: .gitignore  LICENSE  README.md  accounts.env  accounts.env.example  add_watcher.py  bot.py  export_session.py  monitor_v10.py  monitor_v11.py  monitor_v6.py  monitor_v7.py  monitor_v8.py  monitor_v9.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
config/: .env.example  default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md
migrations/: 001_initial.py  002_indexes.py  003_fulltext_search.py
scripts/: backup.py  health_check.py  migrate.py
src/: __init__.py  main.py
src/application/jobs/: backup_job.py  link_validator_job.py  scheduler.py
src/application/services/: backup_service.py  categorization_service.py  health_service.py  link_service.py  plugin_manager.py  rate_limiter.py  validation_service.py
src/core/: __init__.py  config.py  container.py  exceptions.py  logging.py
src/domain/: __init__.py  entities.py  repositories.py
src/infrastructure/: __init__.py
src/infrastructure/database/: connection.py  migrations.py
src/infrastructure/database/repositories/: link_repository.py  submission_backup_repository.py  (+1 more)
src/infrastructure/http/: server.py
src/infrastructure/telegram/: bot_client.py
src/presentation/: __init__.py
src/presentation/bot/: __init__.py  keyboards.py  orchestrator.py
tests/integration/: test_repositories.py
tests/unit/: test_categorization_service.py  test_link_service.py  test_validation_service.py
(+3 files in other folders)
